objects/cic_credit__Credit_Score__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Credit Scores</relationshipLabel>
        <relationshipName>Credit_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Facta_Inquiries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>creditScoreFactaInquiriesIndicator</description>
        <label>Facta Inquiries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cic_credit__Model_Name__c</fullName>
        <label>Model Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Rank_Percentile__c</fullName>
        <description>creditScoreRankPercentileValue</description>
        <label>Rank Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Co Borrower</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Score_Date__c</fullName>
        <description>creditScoreDate</description>
        <label>Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Score__c</fullName>
        <label>Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Credit Score</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Credit Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>